--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- footer -->
       <div class="footer animate__animated animate__bounceInUp
         animate__delay-4s">
-        <i>Thanks for coming guys</i>
+        <i>Thanks for coming</i>
       </div>
     </div>
   </body>
