--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="link">
         <a href="https://www.instagram.com/algiojersaaa/?hl=id"
           class="animate__animated animate__bounceInLeft">instagram</a>
-        <a href="https://alfasaune.github.io/alfasaunelinktree.github.io/" target="_blank" class="animate__animated
+        <a href="https://alfasaune.github.io/agalfagaclothing.github.io/" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-1s">Agalfaga Clothing</a>
         <a href="https://github.com/alfasaune" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-2s">Github</a>
